całość wersja wstępna

--- a/Samochod/src/main/resources/hello-view.fxml
+++ b/Samochod/src/main/resources/hello-view.fxml
@@ -230,13 +230,13 @@
                     <children>
                         <Label text="Mapa" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="10.0" />
 
-                        <!-- Ikona samochodu (wymaga pliku graficznego np. car.png w folderze zasobów) -->
+                        <!-- Ikona samochodu (wymaga pliku graficznego np. car.png w folderze zasobów)-->
                         <VBox alignment="CENTER" layoutX="50.0" layoutY="50.0">
                             <children>
-                                <!-- Placeholder na obrazek - wstaw tu swoją ścieżkę -->
+                                 <!--Placeholder na obrazek - wstaw tu swoją ścieżkę-->
                                 <ImageView fitHeight="40.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true">
                                     <image>
-                                        <Image url="car-icon.jpg" />
+                                        <Image url="@car-icon.jpg" />
                                     </image>
                                 </ImageView>
                                 <Label text="Car" />
